# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: main.yml
page_analyzer/: app.py  cutter.py  db_actions.py  parser.py
page_analyzer/templates/: all_pages.html  index.html  page.html
